@@ -3,6 +3,9 @@
 1.5.4 (beta)
 =============================
 
+Updated libraries:
+	openjpeg git-v2.3.1-2-gd0dd894a;
+
 1.5.3
 =============================
 
